# bcp-cpp

./: .gitignore  CMakeLists.txt  benchmark.py  build.sh
.github/workflows/: static.yml
dataset/: c21_1_d1.col  c21_1_d2.col  c21_2_d1.col  c21_2_d2.col  c21_3_d1.col  c21_3_d2.col  c21_4_d1.col  c21_4_d2.col  c21_5_d1.col  c21_5_d2.col  c21_6_d1.col  c21_6_d2.col  c21_7_d1.col  c21_7_d2.col  c21_8_d1.col  c21_8_d2.col  c55_1_d1.col  c55_2_d2.col
display_result/: index.html
display_result/data/: 1G-I-S-0_2026-01-04-12-44-02.csv  1G-I-y-0-0_Cadical_2026-01-13-01-52-51.csv  1G-N-0-0_Cadical_2026-01-01-08-40-15.csv  1G-N-0-0_Kissat_2026-01-17-10-13-09.csv  1L-I-S-0_2026-01-04-11-15-32.csv  1L-N-0-0_2026-01-01-03-47-16.csv  2G-I-both-0-P_Cadical_2026-01-14-15-41-57.csv  2G-I-x-0-P_Cadical_2026-01-14-14-39-20.csv  2G-I-x-S-P_Cadical_2026-01-14-21-59-15.csv  2G-I-y-S-P_Cadical_2026-01-13-11-36-27.csv  2G-N-0-0_2026-01-02-08-37-24.csv  2G-N-0-P_2026-01-02-10-21-10.csv  2G-N-S-0_Cadical_2026-01-02-09-28-53.csv  2G-N-S-P_2026-01-02-12-32-07.csv  2L-I-x-0-P_Cadical_2026-01-14-06-11-29.csv  2L-I-y-S-0_Cadical_2026-01-13-06-16-52.csv  2L-N-0-0_Cadical_2026-01-01-23-23-52.csv  2L-N-0-P_Cadical_2026-01-02-01-03-14.csv  2L-N-0-P_Kissat_2026-01-17-14-03-28.csv  BCP_POP-S-B_2026-01-08-10-54-40.csv  BCP_POP-S-B_Symmetry-Breaking_2026-01-08-09-52-15.csv  BCP_one-var-greater_incremental_2026-01-01-10-06-43.csv  BCP_one-var-less_incremental_2026-01-01-05-16-55.csv  BCP_staircase-aux_2026-01-01-13-09-12.csv  BCP_staircase-aux_symmetry-breaking_heuristic_2026-01-01-15-23-34.csv  BCP_two-vars-greater_heuristic_incremental_2026-01-02-13-53-00.csv  BCP_two-vars-greater_incremental_2026-01-02-11-46-33.csv  BCP_two-vars-greater_symmetry-breaking_heuristic_incremental_2026-01-02-16-39-34.csv  BCP_two-vars-greater_symmetry-breaking_incremental_2026-01-02-15-16-40.csv  BCP_two-vars-less_heuristic_incremental_2026-01-02-04-47-48.csv  BCP_two-vars-less_incremental_2026-01-02-02-31-41.csv  BCP_two-vars-less_symmetry-breaking_2026-01-02-00-10-55.csv  BCP_two-vars-less_symmetry-breaking_heuristic_incremental_2026-01-02-07-44-04.csv  BCP_two-vars-less_symmetry-breaking_incremental_2026-01-02-06-10-45.csv  X-N-0-0_2026-01-05-14-30-11.csv  X-N-0-P_2026-01-05-17-11-58.csv  X-N-S-0_2026-01-05-15-53-09.csv  X-N-S-P_2026-01-05-18-30-23.csv  X-fixed-width-N-0-P_Kissat_2026-01-18-15-19-04.csv  X-fixed-width-N-S-P_Cadical_2026-01-16-01-34-04.csv  (+14 more)
result/POP/: BCP_POP-H-S-B-Symmetry-breaking-Cadical_2026-01-10-00-44-56.csv  BCP_POP-S-B-Cadical_2026-01-09-17-01-32.csv  BCP_POPH-S-B-Cadical_2026-01-09-13-58-05.csv  BCP_POPH-S-B_Kissat-Symmetry-Breaking_2026-01-08-00-03-34.csv  BCP_POPH-S-B_Kissat_2026-01-08-12-46-33.csv  BCP_POP_S_B-Symmetry-breaking-Cadical_2026-01-09-19-36-29.csv
result/result_124_configs/: 1G-I-y-S-0_Cadical_2026-01-13-03-00-14.csv  1G-N-S-0_Cadical_2026-01-01-10-54-03.csv  1G-N-S-0_Kissat_2026-01-17-11-04-39.csv  1L-I-y-0-0_Cadical_2026-01-12-23-38-27.csv  1L-I-y-S-0_Cadical_2026-01-13-00-47-31.csv  1L-N-0-0_Kissat_2026-01-17-08-12-03.csv  1L-N-S-0_Cadical_2026-01-01-06-30-14.csv  1L-N-S-0_Kissat_2026-01-17-09-11-01.csv  2G-I-both-0-0_Cadical_2026-01-14-13-40-06.csv  2G-I-both-S-0_Cadical_2026-01-14-20-52-10.csv  2G-I-both-S-P_Cadical_2026-01-14-23-13-56.csv  2G-I-x-0-0_Cadical_2026-01-14-12-41-02.csv  2G-I-x-S-0_Cadical_2026-01-14-19-47-49.csv  2G-I-y-0-0_Cadical_2026-01-13-08-15-41.csv  2G-I-y-0-P_Cadical_2026-01-13-09-17-53.csv  2G-I-y-S-0_Cadical_2026-01-13-10-22-19.csv  2G-N-0-0_Kissat_2026-01-17-16-06-59.csv  2G-N-0-P_Kissat_2026-01-17-18-03-22.csv  2G-N-S-0_Kissat_2026-01-17-16-56-16.csv  2G-N-S-P_Kissat_2026-01-17-18-59-06.csv  2L-I-both-0-0_Cadical_2026-01-14-05-07-58.csv  2L-I-both-0-P_Cadical_2026-01-14-07-10-10.csv  2L-I-both-S-0_Cadical_2026-01-14-09-29-54.csv  2L-I-both-S-P_Cadical_2026-01-14-11-36-13.csv  2L-I-x-0-0_Cadical_2026-01-14-04-13-14.csv  2L-I-x-S-0_Cadical_2026-01-14-08-23-45.csv  2L-I-x-S-P_Cadical_2026-01-14-10-37-45.csv  2L-I-y-0-0_Cadical_2026-01-13-04-01-48.csv  2L-I-y-0-P_Cadical_2026-01-13-05-09-39.csv  2L-I-y-S-P_Cadical_2026-01-13-07-16-09.csv  2L-N-0-0_Kissat_2026-01-17-11-57-49.csv  2L-N-S-0_Kissat_2026-01-17-12-59-31.csv  2L-N-S-P_Cadical_2026-01-02-03-23-13.csv  2L-N-S-P_Kissat_2026-01-17-14-56-25.csv  X-fixed-width-I-x-0-0_Cadical_2026-01-17-03-56-36.csv  X-fixed-width-I-x-0-P_Cadical_2026-01-17-06-16-31.csv  X-fixed-width-I-x-S-0_Cadical_2026-01-17-05-25-21.csv  X-fixed-width-I-x-S-P_Cadical_2026-01-17-07-05-29.csv  X-fixed-width-N-0-0_Cadical_2026-01-15-21-58-19.csv  X-fixed-width-N-0-0_Kissat_2026-01-18-11-48-12.csv  (+45 more)
result/result_48_configs_with_no_pairwise/: 1G-I-y-0-0_Cadical_2026-01-25-10-03-36.csv  1G-I-y-S-0_Cadical_2026-01-25-13-15-30.csv  1G-N-0-0_Cadical_2026-01-24-14-00-13.csv  1G-N-S-0_Cadical_2026-01-24-06-56-28.csv  1L-I-y-0-0_Cadical_2026-01-24-19-55-31.csv  1L-I-y-S-0_Cadical_2026-01-25-15-25-39.csv  1L-N-0-0_Cadical_2026-01-24-09-31-06.csv  1L-N-S-0_Cadical_2026-01-25-19-03-42.csv  2G-I-both-0-0_Cadical_2026-01-24-14-58-37.csv  2G-I-both-S-0_Cadical_2026-01-25-07-00-23.csv  2G-I-x-0-0_Cadical_2026-01-25-09-05-49.csv  2G-I-x-S-0_Cadical_2026-01-25-16-36-55.csv  2G-I-y-0-0_Cadical_2026-01-24-15-57-25.csv  2G-I-y-S-0_Cadical_2026-01-25-08-02-38.csv  2G-N-0-0_Cadical_2026-01-24-10-23-20.csv  2G-N-S-0_Cadical_2026-01-24-08-38-42.csv  2L-I-both-0-0_Cadical_2026-01-24-13-04-05.csv  2L-I-both-S-0_Cadical_2026-01-25-11-08-23.csv  2L-I-x-0-0_Cadical_2026-01-24-16-57-59.csv  2L-I-x-S-0_Cadical_2026-01-25-20-17-29.csv  2L-I-y-0-0_Cadical_2026-01-24-18-56-49.csv  2L-I-y-S-0_Cadical_2026-01-25-12-13-14.csv  2L-N-0-0_Cadical_2026-01-24-07-46-55.csv  2L-N-S-0_Cadical_2026-01-24-06-09-31.csv  X-fixed-width-I-x-0-0_Cadical_2026-01-26-08-42-30.csv  X-fixed-width-I-x-S-0_Cadical_2026-01-26-05-44-17.csv  (+22 more)
src/: main.cpp
test/: test_bcp.cpp  test_common.h  test_one_var_greater.cpp  test_one_var_less.cpp  test_staircase_aux_cache.cpp  test_staircase_aux_nocache.cpp  test_staircase_no_aux.cpp  test_two_vars_greater.cpp  test_two_vars_less.cpp
(+25 files in other folders)
